--- a/hw/Updateitem.html
+++ b/hw/Updateitem.html
@@ -17,23 +17,27 @@
     </tr>
     <tr>
         <td>Item Name</td>
-        <td><input type="TEST" size="15" name="ItemName"/></td>
+        <td><input type="TEXT" size="15" name="ItemName"/></td>
     </tr>    
     <tr>
         <td>Price</td>
-        <td><input type="TEST" size="30" name="price"/></td>
+        <td><input type="TEXT" size="30" name="price"/></td>
     </tr>
     <tr>
         <td>Discount</td>
-        <td><input type="TEST" size="30" name="discount"/></td>
+        <td><input type="TEXT" size="30" name="discount"/></td>
     </tr>
     <tr>
         <td>Rebate</td>
-        <td><input type="TEST" size="30" name="rebate"/></td>
+        <td><input type="TEXT" size="30" name="rebate"/></td>
     </tr>
     <tr>
         <td>Stock</td>
-        <td><input type="TEST" size="30" name="stock"/></td>
+        <td><input type="TEXT" size="30" name="stock"/></td>
+    </tr>    
+    <tr>
+        <td>Accessories</td>
+        <td><input type="TEXT" size="50" name="accessories"/></td>
     </tr>
     <tr>
         <td colspan='2'>
